--- a/sass/source/sass/blocks/user-list.scss
+++ b/sass/source/sass/blocks/user-list.scss
@@ -5,6 +5,10 @@
   }
 
   &__item {
+    @media (min-width: $tablet-width) {
+      max-height: 80px;
+    }
+
     &:active {
       background-color: $lite-primary;
     }
@@ -44,6 +48,7 @@
 
     @media (min-width: $tablet-width) {
       padding: 32px 22px;
+      max-height: 80px;
     }
 
     @media (min-width: $desktop-width) {
